--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -159,13 +159,13 @@
         </style>
 
         {# Text size control #}
-        <style>
-            @media (min-width: 480px) and (max-width: 1024px) {
-              .aware_ad_text_size {
-                font-size: calc(14px + (18 - 14) * ( (100vw - 480px) / ( 1024 - 480) ));
-              }
-            }
-        </style>
+<!--        <style>-->
+<!--            @media (min-width: 480px) and (max-width: 1024px) {-->
+<!--              .aware_ad_text_size {-->
+<!--                font-size: calc(14px + (18 - 14) * ( (100vw - 480px) / ( 1024 - 480) ));-->
+<!--              }-->
+<!--            }-->
+<!--        </style>-->
 
         {# Menu modify and hide ReCaptcha mark #}
         <style>
