--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -217,7 +217,7 @@
                                 {% endif %}
                                 <br/><br/>
                                 <b>
-                                    Источник - <a href="{{ el.0.4 }}">{{ el.0.2 }}</a>
+                                    Источник - <a href="{{ el.0.4 }}" style="background: #fff;border-radius: 5px;padding: 0.17em">{{ el.0.2 }}</a>
                                 </b>
                                 <br>
                                 <i>
