search system update and optimize

--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -23,11 +23,11 @@
     }
 
     a {
-        color: #565656;
+        color: #8AB4F8;
     }
 
     a:hover {
-        color: #1f1f1f;
+        color: #4d82d8;
     }
 
     *:focus {
