--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -29,8 +29,7 @@ AWARE
                 <label class="city qwriter-content-block" style="width:100%;">
                     {{ aware.page_html_code|safe }}<br/>
                     <p>Эта страница сгенерирована специально для Telegram бота AWARE</p>
-                    <br></label><br><br>
-                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+                    <br></label>
             </div>
         </div>
     </div>
