--- a/my_web/templates/my_web/news-feed.html
+++ b/my_web/templates/my_web/news-feed.html
@@ -27,8 +27,7 @@ AWARE
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
                     <label class="username">Случайная цитата</label><br>
-                    <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
-                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+                    <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label>
                 </div>
             </div>
         </div>
