--- a/my_web/templates/my_web/page_notify.html
+++ b/my_web/templates/my_web/page_notify.html
@@ -3,8 +3,7 @@
         <div style="float: left; ">
 
             <label class="username">Подсказка </label><br>
-            <label class="city"><b>Сейчас Вы видите контент, который соответствует адресу по которому Вы перешли.</b></label><br>
-            <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+            <label class="city"><b>Сейчас Вы видите контент, который соответствует адресу по которому Вы перешли.</b></label>
         </div>
     </div>
 </div>
