--- a/my_web/templates/my_web/status.html
+++ b/my_web/templates/my_web/status.html
@@ -39,8 +39,7 @@ AWARE
                             {{ status.logs.1.reason.code }}&nbsp;
                             {{ status.logs.1.reason.detail.short }}
                         </b></i><br/>
-                    </label><br/>
-                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+                    </label>
                 </div>
             </div>
         </div>
