--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -34,7 +34,7 @@
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap&family=Josefin+Sans&display=swap" rel="stylesheet">
         <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "d00efa59211d4353a71a1eb14723c167"}'></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ44FFSGGD"></script>
         <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-BZ44FFSGGD");</script>
