--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -47,25 +47,30 @@
 <!--        </script>-->
 
         {# Scrollbar styles #}
-<!--        <style>-->
-<!--            ::-webkit-scrollbar {-->
-<!--                width: 15px;-->
-<!--            }-->
+        <style>
+            ::-webkit-scrollbar {
+                width: 15px;
+            }
 
-<!--            ::-webkit-scrollbar-track {-->
-<!--                background: #191919;-->
-<!--            }-->
+            .disable-track-aware::-webkit-scrollbar {
+                width: 0px;
+                background: transparent;
+            }
 
-<!--            ::-webkit-scrollbar-thumb {-->
-<!--                background: #939393;-->
-<!--                border-radius: 8px;-->
-<!--                border: 4px solid #191919;-->
-<!--            }-->
+            ::-webkit-scrollbar-track {
+                background: transparent;
+            }
 
-<!--            ::-webkit-scrollbar-thumb:hover {-->
-<!--                background: #7c7c7c;-->
-<!--            }-->
-<!--        </style>-->
+            ::-webkit-scrollbar-thumb {
+                background: #939393;
+                border-radius: 8px;
+                border: 4px solid #191919;
+            }
+
+            ::-webkit-scrollbar-thumb:hover {
+                background: #7c7c7c;
+            }
+        </style>
 
         {# Search styles #}
         <style>
@@ -200,7 +205,7 @@
             <i class="fas fa-compass" onclick="onMenuClicked()"></i>
         </div>
     </div>
-    <div class="menu_box" style="display: none;">
+    <div class="menu_box disable-track-aware" style="display: none;">
         <a href="{% url 'index_page' %}">
             <div class="menu_item menu_item_first">
                 <label>Главная</label>
