--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -30,7 +30,7 @@ AWARE
                 <div class="search-input" style="z-index: 106;">
                     <a href="" target="_blank" hidden></a>
                     <input type="text" maxlength="800" class="search-input-aware" size="100" placeholder="{{ search_template }}">
-                    <div class="autocom-box">
+                    <div class="autocom-box disable-track-aware">
                     </div>
                     <div class="load-more-end-butt icon">
                         <i class="spinner-border spinner_search_load_aware" style="visibility: hidden;"></i>
