--- a/my_web/templates/my_web/news-feed.html
+++ b/my_web/templates/my_web/news-feed.html
@@ -22,7 +22,7 @@ AWARE
 
 {% block content %}
 {% load static %}
-    <div class="row-posts-end-ad">
+    <div class="row-posts-end-ad" style="margin: auto;">
     </div>
     <div class="row-posts-end">
         <div class="col-12 col-lg-12 padding-block-center-box">
