--- a/my_web/templates/my_web/news-feed.html
+++ b/my_web/templates/my_web/news-feed.html
@@ -22,18 +22,20 @@ AWARE
 
 {% block content %}
 {% load static %}
-    <div class="row-posts-end-ad" style="margin: auto;">
-    </div>
-    <div class="row-posts-end">
-        <div class="col-12 col-lg-12 padding-block-center-box">
-            <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <div style="float: left;">
-                    <label class="username">Случайная цитата</label><br>
-                    <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label>
+    <div style="display: block;margin-left: auto;margin-right: auto;">
+        <div class="row-posts-end-ad" style="margin: auto;">
+        </div>
+        <div class="row-posts-end">
+            <div class="col-12 col-lg-12 padding-block-center-box">
+                <div class="user box aos-init aos-animate" data-aos="fade-up">
+                    <div style="float: left;">
+                        <label class="username">Случайная цитата</label><br>
+                        <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label>
+                    </div>
                 </div>
             </div>
+            <br><button style="margin:10px auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">{{ loading_button_text }}&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
         </div>
-        <br><button style="margin:10px auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">{{ loading_button_text }}&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
     </div>
 {% endblock %}
 
