--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -126,7 +126,6 @@
                                         </p>
                                     </li>
                                     {% for weather_el in weather.future_weather %}
-                                        <!-- {{ forloop.counter }} -->
                                         <li id="{{ 24|get_random_string }}" style="border-top: 1px solid #fff;" class="col-xs-4 col-sm-2 text-center">
                                             <h3 class="h5">{{ forloop.counter|add_days_by_timestamp|date:"D" }}</h3>
                                             <p>
@@ -300,14 +299,24 @@
                             {{ el.1.title }}</a>
                         </label><br>
                         <label class="city">
-                            {% if el.1.thumb %}
+                            {% if el.1.thumb and not el.1.youtube %}
                                 <img
-                                        id="{{ 16|get_random_string }}"
+                                        id="{{ 32|get_random_string }}"
                                         src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
                                         onerror="imgError(this);"
                                         style="margin-top: 1%;width: 20%;margin-right: 10px;height: auto;-webkit-appearance: none;border-radius: 5px;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
                                         alt="Изображения предварительного просмотра"
                                 >
+                            {% elif el.1.youtube %}
+                                <iframe
+                                        id="{{ 32|get_random_string }}"
+                                        src="https://www.youtube.com/embed/{{ el.1.youtube }}"
+                                        title="YouTube video player"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen=""
+                                        style="margin-top: 1%;width: 100%;margin-right: 10px;height: 45vh;-webkit-appearance: none;border-radius: 5px;padding: 0px;text-align: left;padding-bottom: 5px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
+                                ></iframe>
                             {% endif %}
                             <p>{{ el.1.displayLink }}</p>
                             <i>{{ el.1.snippet }}</i>
