--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -295,8 +295,10 @@
             <div class="col-12 col-lg-12 padding-block-center-box">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
                     <div style="float: left;">
-                        <label class="username"><a target="_blank" href="{{ el.1.link }}">
-                            {{ el.1.title }}</a>
+                        <label class="username" style="margin-top: -0.5em;">
+                            <a target="_blank" href="{{ el.1.link }}">
+                                {{ el.1.title }}
+                            </a>
                         </label><br>
                         <label class="city">
                             {% if el.1.thumb and not el.1.youtube %}
