--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -42,24 +42,26 @@ AWARE
         <div class="row-posts-end-ad">
         </div>
         <div class="row-posts-end">
-            {% if r_type %}
-                <div class="col-12 col-lg-12 padding-block-center-box">
-                    <div class="user box aos-init aos-animate" data-aos="fade-up">
-                        <div style="float: left;">
-                            <label class="username">Случайная цитата</label><br>
-                            <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
+            {% if add_.text %}
+                {% if r_type %}
+                    <div class="col-12 col-lg-12 padding-block-center-box">
+                        <div class="user box aos-init aos-animate" data-aos="fade-up">
+                            <div style="float: left;">
+                                <label class="username">Случайная цитата</label><br>
+                                <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
+                            </div>
                         </div>
                     </div>
-                </div>
-            {% else %}
-                <div class="col-12 col-lg-12 padding-block-center-box">
-                    <div class="user box aos-init aos-animate" data-aos="fade-up">
-                        <div style="float: left;">
-                            <label class="username">Случайный факт</label><br>
-                            <label class="city"><i>{{ add_.text }}</i><br></label><br><br>
+                {% else %}
+                    <div class="col-12 col-lg-12 padding-block-center-box">
+                        <div class="user box aos-init aos-animate" data-aos="fade-up">
+                            <div style="float: left;">
+                                <label class="username">Случайный факт</label><br>
+                                <label class="city"><i>{{ add_.text }}</i><br></label><br><br>
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
             {% endif %}
         </div>
         <div style="margin: auto;">
