--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -306,9 +306,12 @@
                                         id="{{ 32|get_random_string }}"
                                         src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
                                         onerror="imgError(this);"
-                                        style="margin-top: 1%;width: 20%;margin-right: 10px;height: auto;-webkit-appearance: none;border-radius: 5px;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
+                                        style="margin-top: 1%;width: 20%;margin-right: 0.9em;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
                                         alt="Изображения предварительного просмотра"
                                 >
+                                <p style="margin-top: 0.5em;">
+                                    {{ el.1.displayLink }}
+                                </p>
                             {% elif el.1.youtube %}
                                 <div class="view-container-youtube-video">
                                     <iframe
@@ -322,12 +325,16 @@
                                             style="margin-top: 1%;width: 100%;margin-right: 10px;height: 45vh;-webkit-appearance: none;border-radius: 2vh;padding: 0px;text-align: left;padding-bottom: 0px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
                                     ></iframe>
                                 </div>
+                                <p style="margin-top: 0.8em;">
+                                    {{ el.1.displayLink }}
+                                </p>
+                            {% else %}
+                                <p>
+                                    {{ el.1.displayLink }}
+                                </p>
                             {% endif %}
-                            <p style="margin-top: 0.8em;">
-                                {{ el.1.displayLink }}
-                            </p>
                             <i>
-                                {{ el.1.snippet }}
+                                {{ el.1.snippet|safe }}
                             </i>
                         </label><br>
                     </div>
