update news template

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -279,7 +279,7 @@
                                 {% endif %}
                                 <br/><br/>
                                 <b>
-                                    Источник - <a href="{{ el.0.4 }}">{{ el.0.2 }}</a>
+                                    Источник - <a href="{{ el.0.4 }}" target="_blank">{{ el.0.2 }}</a>
                                 </b>
                                 <br>
                                 <i>
