--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -166,7 +166,7 @@
         {# Error search AWARE #}
         <style>
               .box_aware_error {
-                width: 350px;
+                /* width: 350px; */
                 height: 100%;
                 max-height: 600px;
                 min-height: 450px;
