--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -13,32 +13,46 @@
         <meta name="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:description" content="{% block twitter_desc %}{% endblock %}">
-        <meta name="keywords" content="сайт, веб сайт, слово, истроия, текст, свобода, соц сеть, сеть, социальная, социалная сеть, пост, посты, рассказ, фантазия, публикации, поиск, новости, новое, образование, бесплатно, свободно, свободное">
+
+        <meta
+                name="keywords"
+                content="сайт, веб сайт, слово, истроия, текст, свобода, соц сеть, сеть, социальная, социалная сеть, пост, посты, рассказ, фантазия, публикации, поиск, новости, новое, образование, бесплатно, свободно, свободное"
+        >
+
         <meta name="author" content="Koval Yaroslav">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js" integrity="sha512-2rNj2KJ+D8s1ceNasTIex6z4HWyOnEYLVC3FigGOmyQCZc2eBXKgOxQmo3oKLHyfcj53uz4QMsRCWNbLd32Q1g==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha512-XKa9Hemdy1Ui3KSGgJdgMyYlUg1gM+QhL6cnlyTe2qzMCYm4nAZ1PsVerQzTTXzonUR+dmswHqgJPuwCq1MaAg==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" integrity="sha512-q583ppKrCRc7N5O0n2nzUiJ+suUv7Et1JGels4bXOaMFQcamPk9HjdUknZuuFjBNs7tsMuadge5k9RzdmO+1GQ==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.7.2/bluebird.min.js" integrity="sha512-TFp7JOp8so/oHJrngLI0kn9diZrc0YDr1NrGj1YbzbvSBdGfligjYVRp1xtqlmNCPWpx4xJDhiWSGgUYvqCbBg==" crossorigin="anonymous"></script>
+
+        <script src='{% static "my_web/js/jquery.min.js" %}'></script>
+        <script src='{% static "my_web/js/jquery.cookie.min.js" %}'></script>
+        <script src='{% static "my_web/js/bootstrap.min.js" %}'></script>
+        <script src='{% static "my_web/js/popper.min.js" %}'></script>
+        <script src='{% static "my_web/js/aos.js" %}'></script>
+        <script src='{% static "my_web/js/all.min.js" %}'></script>
+        <script src='{% static "my_web/js/lazysizes.min.js" %}'></script>
+        <script src='{% static "my_web/js/bluebird.min.js" %}'></script>
+
+        <link rel="preconnect" href="https://www.google.com">
         <script src="https://www.google.com/recaptcha/api.js?render={% block public_re %}{% endblock %}"></script>
+
         <link rel="search" type="application/opensearchdescription+xml" title="AWARE" href="/opensearch.xml">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA==" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
         <link rel="icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" />
-        <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+
+        <link rel="stylesheet" href='{% static "my_web/css/aos.css" %}'>
+        <link rel="stylesheet" href='{% static "my_web/css/main_page.css" %}'>
+        <link rel="stylesheet" href='{% static "my_web/css/all.min.css" %}'>
+        <link rel="stylesheet" href='{% static "my_web/css/bootstrap.min.css" %}'>
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap&family=Josefin+Sans&display=swap&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "d00efa59211d4353a71a1eb14723c167"}'></script>
+
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+                data-cf-beacon='{"token": "d00efa59211d4353a71a1eb14723c167"}'>
+        </script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ44FFSGGD"></script>
         <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-BZ44FFSGGD");</script>
         <title>{% block title %}{% endblock %}</title>
+
         <script data-ad-client="ca-pub-8198743186279168" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
         {# Change background to live gradient for PC #}
