update base template

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -39,6 +39,7 @@
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ44FFSGGD"></script>
         <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-BZ44FFSGGD");</script>
         <title>{% block title %}{% endblock %}</title>
+        <!-- Google AdSense Tag -->
         <script data-ad-client="ca-pub-8198743186279168" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
         {# Change background to live gradient for PC #}
