--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -42,26 +42,50 @@ AWARE
         <div class="row-posts-end-ad">
         </div>
         <div class="row-posts-end">
-            {% if add_.text %}
-                {% if r_type %}
-                    <div class="col-12 col-lg-12 padding-block-center-box">
-                        <div class="user box aos-init aos-animate" data-aos="fade-up">
-                            <div style="float: left;">
-                                <label class="username">Случайная цитата</label><br>
-                                <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
+            {% if not news_rand %}
+                {% if add_.text %}
+                    {% if r_type %}
+                        <div class="col-12 col-lg-12 padding-block-center-box">
+                            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                                <div style="float: left;">
+                                    <label class="username">Случайная цитата</label><br>
+                                    <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {% else %}
-                    <div class="col-12 col-lg-12 padding-block-center-box">
-                        <div class="user box aos-init aos-animate" data-aos="fade-up">
-                            <div style="float: left;">
-                                <label class="username">Случайный факт</label><br>
-                                <label class="city"><i>{{ add_.text }}</i><br></label><br><br>
+                    {% else %}
+                        <div class="col-12 col-lg-12 padding-block-center-box">
+                            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                                <div style="float: left;">
+                                    <label class="username">Случайный факт</label><br>
+                                    <label class="city"><i>{{ add_.text }}</i><br></label><br><br>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 {% endif %}
+            {% else %}
+                <div class="col-12 col-lg-12 padding-block-center-box">
+                    <div class="user box aos-init aos-animate" data-aos="fade-up">
+                        <div style="float: left;">
+                            <label class="username">{{ add_.0 }}</label><br>
+                            <label class="city">
+                                <br/>
+                                <i>
+                                    {{ add_.1 }}
+                                </i>
+                                <br/><br/>
+                                <b>
+                                    Источник - <a href="{{ add_.4 }}" target="_blank">{{ add_.2 }}</a>
+                                </b>
+                                <br>
+                                <i>
+                                    <u>Опубликовано {{ add_.3 }} (UTC)</u>
+                                </i>
+                            </label>
+                        </div>
+                    </div>
+                </div>
             {% endif %}
         </div>
         <div style="margin: auto;">
