--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -363,7 +363,7 @@
               .box_aware_error .box_aware_error__description .box_aware_error__description-container {
                 color: #fff;
                 text-align: center;
-                width: 200px;
+                width: 16em;
                 font-size: 16px;
                 margin: 0 auto;
               }
