--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -49,7 +49,7 @@ AWARE
                     <div class="user box aos-init aos-animate" data-aos="fade-up">
                         <div style="float: left;">
                             <label class="city" style="font-size: calc(14px + (18 - 14) * ( (100vw - 480px) / ( 1024 - 480) ));">
-                                {{ advertise.text }}
+                                {{ advertise.i_text }}
                             </label>
                         </div>
                     </div>
