--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -3,6 +3,18 @@
 {# Template for generating a tape of records on the main page of the site. #}
 {# Imagine that this code was not written by me. I don't really like him. #}
 
+{% if advertise %}
+    <div class="col-12 col-lg-12 padding-block-center-box">
+        <div class="user box aos-init aos-animate" data-aos="fade-up">
+            <div style="float: left;">
+                <label class="city" style="font-size: calc(14px + (18 - 14) * ( (100vw - 480px) / ( 1024 - 480) ));">
+                    {{ advertise.i_text|safe }}
+                </label>
+            </div>
+        </div>
+    </div>
+{% endif %}
+
 {% if typeload == 'newsession' and covid_stat_append %}
     {% if covid_ua.0 %}
         <div class="col-12 col-lg-12 padding-block-center-box">
